# nuqleosim

./: .gitignore  AUTHORS  CMakeLists.txt  README
cmake/: FindQGLViewer.cmake  FindQwt.cmake
data/: icons.qrc  logo.qrc  po.qrc
data/db/: db.xml  db_empty.xml  dbbackup.xml  valid.py
data/logo/: logo.xcf
data/po/: trad_en.ts  trad_fr.ts
doc/: DoCConfig
doc/html/: BioParser_8cpp.html  BioParser_8cpp__dep__incl.md5  BioParser_8cpp__incl.md5  BioParser_8h.html  BioParser_8h__dep__incl.map  BioParser_8h__dep__incl.md5  BioParser_8h__incl.md5  BioParser_8h_source.html  CPU_8cpp.html  CPU_8cpp__incl.map  CPU_8cpp__incl.md5  CPU_8h.html  CPU_8h__dep__incl.map  CPU_8h__dep__incl.md5  CPU_8h__incl.md5  CPU_8h_source.html  PDBParser_8cpp.html  PDBParser_8cpp__incl.map  PDBParser_8cpp__incl.md5  PDBParser_8h.html  PDBParser_8h__dep__incl.map  PDBParser_8h__dep__incl.md5  PDBParser_8h__incl.map  PDBParser_8h__incl.md5  PDBParser_8h_source.html  agent_8h.html  agent_8h__dep__incl.md5  agent_8h__incl.md5  agent_8h_source.html  anaui_8cpp.html  anaui_8cpp__dep__incl.md5  anaui_8cpp__incl.md5  anaui_8h.html  anaui_8h__dep__incl.map  anaui_8h__dep__incl.md5  anaui_8h__incl.md5  anaui_8h_source.html  annotated.html  classAnaUI.html  classAnaUI__coll__graph.map  (+936 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_69.html  classes_6c.html  classes_6d.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_75.html  classes_76.html  classes_78.html  defines_62.html  defines_64.html  (+79 more)
presentation/: beamer.aux  beamer.nav  beamer.out  beamer.tex  beamer.toc  monTheme4.sty
presentation/auto/: beamer.el
presentation/old/: beamer.tex
rapport/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  miniDoc  report_perso.sty
rapport/auto/: main.el  report_perso.el
rapport/bibli/: biblio.bib
rapport/chap/: abstract.tex  analyse.tex  annexes.tex  conception.tex  conclusion.tex  introduction.tex  realisation.tex  resultats.tex
rapport/chap/algo/: banned_compounds.tex  graph_gen.tex  valid_equation.tex
rapport/img/: biogenese.odg  diagSMA.dia
src/: main.cpp  paramaccess.cpp  paramaccess.h
src/datamodel/: experiment.cpp  experiment.h  image.cpp  image.h  mol_struct.h  molecule.cpp  molecule.h  resu_struct.h  rna_struct.h  singledata.cpp  singledata.h
src/dbaccess/: dbaccess.cpp  dbaccess.h  xmlaccess.cpp  xmlaccess.h
src/handler/: datahandler.cpp  datahandler.h  simuhandler.cpp  simuhandler.h
src/parser/: BioParser.cpp  BioParser.h  PDBParser.cpp  PDBParser.h
src/results/: plotui.cpp  plotui.h  plotui.ui  results.cpp  results.h
src/simulation/: CPU.cpp  CPU.h  agent.h  compute.cpp  compute.h
src/ui/: aboutui.ui  anaui.cpp  anaui.h  anaui.ui  dataui.cpp  dataui.h  dataui.ui  elementui.cpp  elementui.h  experimentui.cpp  experimentui.h  experimentui.ui  helpui.ui  imageui.cpp  imageui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculeui.cpp  moleculeui.h  moleculeui.ui  settingsui.cpp  settingsui.h  settingsui.ui  simuui.cpp  simuui.h  simuui.ui
src/utils/: definebug.h  simu_struct.h  synchttp.h  visu_struct.h
src/visu/: lineCaption.ui  linecaption.cpp  linecaption.h  molecule_visu.cpp  molecule_visu.h  viewer.cpp  viewer.h  visuui.cpp  visuui.h  visuui.ui
tools/: autocopyleft.py  licence_header.txt
